--- a/css/resume.css
+++ b/css/resume.css
@@ -211,6 +211,7 @@ q {
   }
 }
 
+/*hover over effect*/
 .hovereffect {
   width: 100%;
   height: 100%;
@@ -238,6 +239,7 @@ q {
 .hovereffect img {
   display: block;
   position: relative;
+  float: right;
   max-width: none;
   -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
   transition: opacity 0.35s, transform 0.35s;
@@ -299,3 +301,5 @@ q {
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
 }
+
+/*hover over effect END*/
